--- a/SE Assignment/SignUp.resx
+++ b/SE Assignment/SignUp.resx
@@ -212,6 +212,133 @@
         IiIiIiKyzTbb/AfXaN2Dti2DBwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="pictureBox2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAASoAAABeCAYAAACU/llMAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAB3RJ
+        TUUH4wkWAQIIGUkpOQAAHBpJREFUeF7tnQuYJEWRx1Nu7447OY9TzjeCiijKKeJjYdnd7mEBH3DICYqg
+        PIVDEQQfIAqiiIAgTxEV5CEiL/VWQZFVXAUVRQ4BFZVTEZBFAQEVUEFw9n7/rOjZnsqsmZqe6ukeiP/3
+        xZfdVZGZkVlZUZmRkZnB4XA4HA6Hw+FwOBwOh8PhcDgcDofD4XA4HA6Hw+FwOBwOh8PhcDgcDofD4XA4
+        HA6Hw+FwOBwOh8PhcDgcDofD4XA4HA6Hw+FwOBwOh8PhcDgcDofD4XA4HA6Hw+FwOBwOh8PhcDgcDofD
+        4XA4HA6Hw/HwwvIQHgWt1CM9ypJxOPoCtbFSm+uVvK0OO0Y3DY8ebYW1RheGEcIdRtvhHYSHEZ5IeBrh
+        pwnPJjynFom3Fc6ETuX/xwiPJNx/dCTsSLhodH5Ye/Sl4THeOHrH8laYM7pZeCzhat0Ur70m/J2xzXqo
+        jait0DbXof1sRlvaJbaldjiC3ycRng6dxe/67bObinhq36dCJ/D7UMJ9yWt78lxAna45ukH4JxPHMdNY
+        /qLwzzyE+fHBtMM3oF/zgP4E/W15OyzvBylty2MZdDmkhrE5DeGxJpajJqi7tXh+lxL+ELrWSL+X6uUy
+        tlmLqJwWRMV0DHQ57eQ30J+h0VzbaprI8yHyuhf6FXQx9J7lI+FFy58b/sFEdPQT+tpS6S0exOcJf597
+        SDNJyKDG923k2UE9OxPTMQn44j+bevttUp+tcDuK6jnGNusw+vLwj5TrVdDXKMt95fINipBnFLoDOgMF
+        ur6PBvoIdWGpaHWb78g9jEESMv0lNoKNw1NMXMcEiEOSVrg5qcdWuG22Kir1rJH/GNrBPeVyDROp3vlQ
+        7Eo9zzHRHU2Bod7f0wAOppLvz1X+sBAyLh6dH/7dxHZUYHReeDJ19Yuk/mapokLmVZD9ZKhvpocmCTn/
+        CO3uPauGQaPeWpWbq3SRGkis/Ha4kfBaQg3HlkBfhi7g/xdqUyt80eJ9FVrKtW8R/oDwV4TKo9LOoHvQ
+        4TSAlUx0RwZS5tTldUn9zVJFhdz78tz/Wi5Ph7gvm9HvCW8gvJrwMsKLCafePrtJbbUdLozpFMNN2cN+
+        BP0ako2quq22wq30rOZZERzTRexSoyyylU3jgL4J7cnYex709NFF4XF8sf+FBr+yjIfqjambW5vEr3iK
+        XxjtV4kyjIQ19GDJax/o29CDWZl42UYXhpeY+I4MqNNVoatydcf1WaWoaBPPRO7/K5cllqewYV5ImXZW
+        m1i+UXia2pLaFNRb+yyTtddoGqHdx4+AZCpsufvBcxVhtqcHz7myq1lRHNMBlf5qKjoZ8uka9MHl88O/
+        GeuMgYe/Gg/5WCirrLj/IWN1ZED9aKj0nXK9cW32KSp6U+VyWFk0vNpLHztjHQhkN6WdngElvSvku9M/
+        qg0g+qG0wynlCrZK/qIavLHOOMh7VWT7UoVsV+i+sTpKoG5Wpo6+nqm3WaWoYi+mFZaUyxHL0g4nUpah
+        MFhHZdUKP8jJiYwHGJujV1g3OTdEeIie1vbGNjDQGLeFkl6VXji64M81ttqQbYvyrjK6YXg8PcVnkMbz
+        +eJtyJB2IdfbIjny8f+lSp86WENDXa6v3G/DqNK3obCcM9ck7+dR9rmSpyMbJN+2udx7QZRfsmV8dzRc
+        gS9R8tNVVNE9YMUwPZGP/xuRx4u5tk406G8aHj2deiOttUjzlkw5/qh8jW0ogEwHleU0Wb+o52FsPaHT
+        NmiXT9Lzo+wvof5jm1XbtTbxvFjnKPem2qrclchjFRTxE0j/mWPvC3kTjpBvi9/zuP9Syrmuht7LNwn/
+        SpxmPyCxcPKtSSv3Nt0ztoEhPpScP5BsEyNhY2OrhB5YtKnBS5x3US55xF8GXQfdzLXfEcqAfy/hfZEK
+        I6kMs7dBMs5eQ6iJA3k670HDWL+p4YYeKuluAO0FnUz6lxBqskITC/J5+gO/u2W7x65J7psIZTi+AJJ3
+        /9bcWzM2LlE7fDaptykqqtijQSlCuxL3BOjLxL+KvCrlg+6Gfsv/6wnlLKzVB7so36m+sLwMmxL/L5ly
+        XKeXx9iGAtTRZpWy8mE0tgjqYg78r4b/7dzfdxxtvOIDDN9q1MEr4TsKugT6GSTn1t9DRb0TxufA84BU
+        5+I7lt9bTNVsExViKzwx1nsrvJt0zoI02VX9vhT/9b4o/xugK/h/LuFBpLVJp+y8h2tzfR+uryhrUf5t
+        VB9RgCpUNoR2+JEqydgGhmi4bIcfJ/LR40O+1xhbgljh6nFQWcS/krAR50DS+Rvp3UF4EbRDr/a7qDxb
+        YTfKcCnpqdFN26Oa9B6AfgmdRLrrQZ/K8NRSVLZsahtIM7RqgNNyCyC+ZuVugc6gzS2oq7CIt1s2Pc3o
+        DZmRWvWKXFkn227lI8CbH5pr8mph+M9otG+FN0F66f9c5qtDMZ7a10jYknBCRRA/6MUEgVyUtILhT7k0
+        p0qkI0V6DfQuyrU94b0JTzt8c/kWk3z4SUhr91IjoCIP2EgpxAfWDt8tyxepFXY2tnGIjUA9gOLrM20F
+        UEXU3QOk/zVoo7pd7dggNLQsehqV0+3TJWSTwurJPYG6k1e71rr19IJMRshwJ2l/uNzLyAHe91akcWbd
+        Op8paFiGXMnsJNfuo04XGltEbKN5G+Jd9kIvbqp9kI4+hG+tUlZxRrMddoL69r5QrodUN1CiAMmzlqLa
+        uxzRImvKd+CGyjj0UEEyMi4fCf9tbGMwfi0cbeSLUIfI62bqaisTYULQYNXd/3UunZkgZJ1QUUXbHMPJ
+        XNwmiTzkD/cF8lvdss4CnmMr4n/EWIYG6l1Tv4lBHVljL8nYIiZQVJrJvL58fdpUDA23sezHYHJo1JH0
+        dGaKyLuGoqJLlo3cCucPwyp7KlK+LFshz96Q7DjdtK6xRcTeSiu8DarlXQ+fnFjVK9LynD/zWwui/2S/
+        7yeUD1mtLwz8shdtZKJkwf0WlBiGc6R8K2Urrv2V/1MejhGnUlHxMj2Le8nESo6Ud5Qhle8vhBqC1pIN
+        /nNlpzMREpDOydl4rXCksQwNqnr/qgvodcYWYQoiUVQTEWlLuRd1ntb3Q7k43QTv92RKMREiiLc312v1
+        nOFVOfRedJ637FM9vS/dRJxaiurgbORWOJsXf1Z5f9vMw6258ogoqwyBXyU8ilCKbjt6OFvy/2WEMra3
+        aECauVrES/sK6L/4vRN87yT8OCRbV2VPTWkTP+syYTappbl4Iu7pS/p98jid8N3Is2uUTQZaky1S8ftl
+        kBbmvh5eGSQ1TX8p9Idc2t0Ef1ZR2WLf03NxRMS7E1oKaUcLGUB3IB19QF7O/0VQUXeyecrGMhJ25P/7
+        uS/Pbu28UeUQ+aDSMzEScO+MbLxW+KCxDA3irFwrXJbIWiiYnYwtgrqppajgkSJQuztBI4hY59Sx1fVI
+        bB+qbxQhfDJUyz4pB9QHMmndr/gmQtBuD8TJfjijzLQVSM/8o/zXM38D4eb2jOOMX5Sj874UowUNIfeH
+        9+QoRw0lCE8tRfWBisifHjYbwESgUuYgc/ZFo9L0xfkM9+f2aneLvTVNy0t5oVCy+RS9nB0syjhwXfsk
+        5dwsZGS+EFpEGVbt5eMQZdPXfEFUYrKZVX7VyC+vqIr8E0UHv+pO+4dt0MvuFbYC4TnQh8gjuxsH13/B
+        l35tizKGWK52OCsbpxUOMbahgZkdvpGVtx3eaGwR1MeEiop76rF+E76t1O7qvouxzoqP4kFQ6sTdDkdE
+        Pu2S0gqfKN83Hs3onUDe6/XqXtIlhxRoMhnWTbGcNWxUh+UiI+SnehFwUECBrEOB818HbXrGi2ys00bM
+        qxWuzeZV2PZWNtaI+KVth69k+Vvh8/A3NrtKek8lr0tyeYm4nygqnvNKXE+GWKSjr+rx8E/b6ddejN1J
+        M7vzAdf3N9YxxMbeDudU8L/P2IYGeu6UMat8kHcPY4uYiFcE/2IZ5419yjC3l1zv7nOmRNbm/k2Z+w9y
+        /aC6s7J1QJpzSfOGcl4d4n6tHtURFZFPN5ZZASpCPZakJ6GHIcdNY2sMdHM1q5jrIWkh6rONLYIh6fO5
+        nvqqFUPRDYytMfASbEK62QXmXE8UlQzaXE9nq9rhp3LgM7ZpQ42ffKpsTkvLPTZToOdV8L/X2IYGNnz+
+        WoW8bza2iAmVWiss4/56xtozSOejSdryiSrklEkjGY5z7YqyHasJkK7MJ9mePtdr9aiOzEZuhdOMZVaA
+        wn48Ww4NHfowKcAX62mknW6jUthctja2COpyByjXKJZouGBsjYFGvgoyZGdKyTNVVIXNK7ElqA003atG
+        iS8k3USJcm1Zefhniur8Mq/xH2RsQ4OoAGSnzMnbDm8xtogJFRW9qSZ6NKR/SJK2ZiWL2cmTyvfi/Xb4
+        gEVvFGpz5LmsIs9aPaqjspFnkaKKtgG+yBXl2NvYGoX1Di7I5tkOBxpbBP8Pr+D7sLE0DmSr+gDlFNXb
+        K3jfaSyNQV9r0v1hkpdmjhaGEWOLkKLiXuJdLyKN2aWoWmEvY4uYUFG1wmHGNi1Qp1qJ0ZmdjbPEhFfH
+        HSYyeXPvQdlgLXqjiOaPasX8yOhRMWR4PPL+JFOGB/iCv9LYGgfpH1POM+bbDqcYy2TDl3GNt0loaFqR
+        Z05RfSzD9zfSaHytZ3QubIWLsvm1w7bGFvGwUlRT6VG1wr7GNi1EOxSKh7y2Eum3PgY81zWQ52eZfLUU
+        Zq5Fbxyknd/8YFqKahbZqKh4uf6nhnQ5ufVxiw3qbr8kTwhZvkDe0Vm2qkHCoynr18eE+gApaPLNTVGP
+        U1SSM8qb8smT+CDSKRafNkWFK0PVsHS8HWfiod9w2qiqFdWexhZR1S4ib6kemkZUYO3wm0y+t/fDntsB
+        ZX5/Oc+Yb82hX5Ux/QwayqyY9eMF+A/k/V1ShswaqyYR/VpKeVq+X+/YnuLsSztcmfD0sZstkP5GULqu
+        qqSobE1fMjtkvIVzX9NU4ZzI9f1MrIioqOQQmuNth4ONbWgQlU/FjCtle5OxRUyiqMbxNg3eifWRM3EV
+        4dot+ugbW+OgXPl9xWr2qD6YjTyEa6mqYI5racVrBm5heJaxNQ4e6o7lPGO+2p3UZrDkA4McOZuM7Aab
+        x4T6APJ8MS9Dzi+q3KPK7gQ6CKI+xtn21P6Q9+ws7xD6UZnyqbKV7m5sEcY7GEUln7iMmwjXb6JNr2Fs
+        jYM89yjnGfOto6iosHx3bIg80yVH3LakTKZIkbXqpVzW5y+EPHVzLhGXdxQVcq3G/3RxsBRVP+1nC8ML
+        ySOnvMf3qCoU6SAIOcYbnAtFdWYF79B5pqsXTd1eWiHvLsYWAd/AFBV5a0+z3C4GNzbpjlIG5dq9nKfl
+        W2vod2A28rCs9dPsWju8B3nOI+w+xfZcKnwT8cSXshXuSsqgfXv62KMi/53LeUZSYzUPePPOnfEe1QS9
+        zPGKSvJpS58S30wTMmifrfkm1hiQ99QcP7xDtxV1HEbTmy7LyjU5zr7B2CKQf3A9Km18N4geFeUq5xnz
+        ramo3pGNXGxDPCy7J+SXJVh3WnYofuc2/+urjQq59iznafkukWFVPAOzUVU3xvFDP/nUZHZLgE8LUD8B
+        vRkqLwZvnJBp59ziZO4lTosm3/HGMjSIpzdnlldxTcukxvnWDVJRVX7EhtlGVWkQllGQyjS2gSH6X1Sd
+        kDMSdow88gtph18l9/UweCgxoT6Ais9vPaveng2bqxok1zQd379ZPzlx5tZ6pTaqqkMgkpdrEECG/GQP
+        PS1jGRpQlzqQJLfJ4/201c2MLaKqXRh/f3tUE5yizQduHWNrHKSfOKDGfGv1qIoVz+lSkHb4Xypz4Icn
+        SIYoS1m+rhdpgn2AtAXJophQH0DaVd7wxxnLxDNX9CSMrXGQp1ax5+xn4xVVMbS+sMxnvH19YeoA2fLO
+        qF0uIMMC3qU1qLNk/RxyJm4yXBucoio2+Ev2vOJav/2oPlnOM+ZbS1FVDRFkWGuFNY1tYBjdJJ74+/OM
+        fGN7pqvB8n9xhmcUnl1jQg1jEk/bcT4z8GUXfsN3lLE0DtLOe8OXFJUAb+LwGXn75DlP/qvGl6VEXE8W
+        P/P8XovMiTsD165geP0YYxsKINOLqbOcXVAbK457l/g/uKFfMUpJzClc65s5QvY7ypyfaKg19KsaNmlT
+        rIXjlzQMAjRg7TiZe/i304jHDp/gf75b2QonGUujkGMcaSd7X6neeCBtY4vg2nZQ7mXr31q/VuU0eaqo
+        qnZ55UXqzF42BethHgf9HNLWtwUV29QmL6h6ItzPPf9by+UYNJBT+4Pl1nR+p7x7B7IPTFEJ5FG1xUtf
+        1vqR37qknQw3Lc8aikoVVrUFSTscamwDA/IdUCHb1ZqxMjY16FdwLXcCyPUou6cbW2OolEuuCK3wRGOL
+        iMb+vCew9sdu/MgnyrsZadffPaE44ipdKNwOd8ObzMRNB9F7ux0uLucV82uFtxnbGCrXBhbG/t2MbeCg
+        nuYgT96Vgh6rsY0B/sEqqordE5DrKmhc+20C5JXd+16ELJMrKgHG/bMJ6OibAZ7yGr+mrfDLrGyyD3U5
+        pOqgAHizB0DCe2KTPQN6ctoBILVFKC9tOFZylLWXMxmaRn5tmlfjkIO6QEmtTpr5PeYh5EsUldn4Ls/y
+        a1+krg/CdKGPBmmmu04Uimc7YxuD6hL+Klvglcj+DGMdKGir2mUz5yIjf7nXGtsYBq6oFoZnkU+6H1Ux
+        yXNo7qzIXsEz14aOlVtwc6+motISlKotGPiakdC2cgwsv4D9AA9wDj2QJ5Dv65R3hUw61SNxlkTO/aGc
+        AVlLQT5NOTfUFHIv5ZBPWVQCxd7t2U3AyOMOeOZZlHGgXK/hfm4rFb2gF1GezaQwepJNL7Omxoujz3Sm
+        W3bfHxF5JYpKsHLlhi0asn6WNOdOZ5hq6+DWhbTTavqMdBZgxUdRdcP97OEDpKczGl/e63OdDshvJZ73
+        k5BtT2So+nBdKx6LMoZBK6ooe9VWL8Ve6CdpxrzjDzhVxPel2MRxD8JsZ6ND8NRTVFHoitM+RNzTGi3t
+        26x9kA+QSwO/t6NhvZpwC+4Ve45PhfRSqYF19nuWvw7jY0I5dv5YeZbl6BD3Fud6SLHRVPQMRMS7W/cJ
+        TyHcDxq/7/cK+eI+1KZc3gi9BzoLPh3umMyQdoj7R1c5yUZjYsVOACLS1fav34dO5feBhLvE+kUhI8cm
+        Hdnib+1b3Q5bw/MGKO6ZDn0byu6e2U3w5xVV0SPNrvkTkbbOMvwqdDS/90GW7aEVe7p3ZCv2zt4SPp0J
+        qKPY9oF0eOaF/F9GmFeiOn8OZWPijINNXHw+Gw/inmarvgWdyO/9CPXMtkUW7Xm/ebeMU6ZiEfXLYjtV
+        navcKBJIW/2eyTW11eyxVtzXRyi7EwLlHaiiEijLC8grr2A1EVU8868TfgR6B7+1EuNVhNXvi3ZxbYVD
+        uH8uJPvjpEd+wVNPUQnqQhMhcQOoIoRRF1HblhYnpRSnUtSnQvnVPkGjQ/BOOBylstrw3JyLWyb4VIbi
+        VA/J0y2bycXvyt5JN8G7hLwnHNtHA3zNo6iUL6T67T71o/vED91LbQyTEHGyikqgXnXe4I25eGVS3tD4
+        Z9+RrbiuDQTr1Z3SMJ+4KtDL1qRKMumTI+WLDHp22oNJdTX19tkhlanTTqdY5/BeRF1nt5nm+sAVlUCZ
+        1OOpdTivyg5/7n0Ze4/5XeuZdxNxpuazqWELmQ3Fuq8cIdtN0twmbiXg2wJKttbtB9nD+RLhWpb9hIhe
+        wUWvbsoPtC6ZTFdDk3qml0H9vgKeGak7ETJKmRxTZ1gJr77mtT5CgybkvIy6rHSeHBZFxQhAh4++K9dW
+        miby0Mc3afeU9yL585lI9cCX7XlEPA+asQM8JyNk0ddMWrf2DBS9l+cTR8O17OxXE0TaN0HvRa4pHc5g
+        LiHHETdZ9jNdIt07oMORST3L25L7kygqgd5LrDv4Jj1+q1cifTXaG6G3k0+twyOiLa6YodQQNNlrayhI
+        zp06Wm2SNXPwDYWiEqQkyDPahKEp99LrEOneBS2hbnJ22t42QJA9hQR1btznSORWqPbQrCkiTw0tboe+
+        zJdpRxnzTbzaUGOAdNDBJyjLT6F7oJ57MsTVcOZ30Hehg6XUe6pggFxzKJd8hI7gt6aEdZJtT42EeOqC
+        X0daJyLTvPhCFxMkd2Z4J1VUAjxyW5F9RucZyg5zLzStXiB5q6enAy2+Q3igehy91J/NUsr+9RVIdpS+
+        vFx1CRk0HJKD9KcIF3XWeU6EWL9Doqg6sC2KdQiD2ve0e1h6LqTzW8LzGK1tTLgX/3M9qmNMhN4QZ2p0
+        NFRhQDySTBYT6pDMX5gAd9kLdh//V2yMVoeKOFoxry+QGq9OGr4GupjfxxPuRL4v6HXWoRs2Y/ckyiIb
+        zBtJ/zBrVBdD3+W/viQ/gWQsl/OhXnoNnb7F7wsgKboDkee1pPFC4ur8vUZmmJQO6a1GuhuSj07SOQKS
+        IVKzd9/j2rUmT8cpUjJeQ7hUZYAOIO6mKl/3Sx/TbIXdoPELgLVFMS+6sU0K1R1pPZE8W8TXhMexhJrw
+        KOQrZOnIdz2keryW/1cS71J+6wDSU6D38VsTMC/MLT7uBWob5LGeykT6ciLVUWU6fPMG6Hb+a/JEB7tO
+        vX2Op3tJV+38Ln7/hlDP4XLofP4fSrgNMjxzKsOX2CaLoeykJ4DPNOKHYEF0wXkn5VYb03PUc10GqQ7u
+        IezYJBXqI3Y3JJ2gNlAcWqrnople9Egsbyt8pqykoqIqreSYNvQgEFrLH1aPhuFiexVtwqUTUzXjoxNU
+        JyXjHSGcH+NrmLYgPJ3/q0ErN6UEJoJe6qiINa2tl1ouEXrZ9VJqBmxReBy/V4kHaM6APN2ID1W7RnTJ
+        FuWSshVJNr2kPfbmposq+aKMxW89x1XjTKfazAzVX3xWesm05k4mDO1kyQcAWTonOE+ZiKsZ14W08bn8
+        Xg96Duk+xco+VGsNpwp7nzXqKNNYueJ7ohGW3g/5XhUf6vmEen+L2Wh1ALR8SJ2aeeHJ8bmXnnmcrMu4
+        9XAtWcnhcDgcY0BJaCh2CeGSMSr+N75nO+nKYJ8O+9rhR1KCxuZwOBzjgUI6uqw4ovJohf9pyjNdvTPS
+        2waFlCwhi3n18cg4h8PxMABK4q1Z5VHY9Y6OQ7xWeCrhqhrqS+loKGj0qC4qtgrXUFLOudo1VsPEwgZ3
+        GuHdFfksG10Q1jdxHA6HI4XZlvKL1+U+Unj8a+LsSkiTJ4uhc7guj/zTCbWK4nRIbkDnQ5p4Wsp/TUTd
+        wu9k48YOcU8zwAdL0Zk4DofDkcLckJIzHftN5CkfunOmMvvscDgewWA4tx5Ko9ayriaIvLT85pNuQHc4
+        HFNCdDWSj1OrrysRtE7yB9AusmNZ1g6Hw1EfZizXsqtjUCpyNL4N6nmZEmnIxiVH258Tnk/aO8sH0LJz
+        OByO3hFn8TTLJ4/yYmubt0CH8/9kQhnStdJAq0e03nIFFQvzzybUlkNaXrZrVHwLwuqaDbTkHQ6Ho7/o
+        uCDEJTFlb/ZiBcdAVko4HA6Hw+FwOBwOh8PhcDgcDofD4XA4HA6Hw+FwOBwOh8PhcDgcDofD4XA4HA6H
+        w+FwOByORxRC+H9++g4IMg4VBQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAlpYAAAEAIABwawEAFgAAACgAAACWAAAALAEAAAEAIAAAAAAAkF8BAAAAAAAAAAAAAAAAAAAA
